--- a/css/styles.css
+++ b/css/styles.css
@@ -557,7 +557,8 @@ a:focus {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.project-item-link:hover .item-overlay-description {
+.project-item-link:hover .item-overlay-description,
+.project-item-link:focus .item-overlay-description {
   opacity: 1;
   transform: translateY(0);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
