--- a/css/styles.css
+++ b/css/styles.css
@@ -458,10 +458,8 @@ a:focus {
   line-height: 16px;
   letter-spacing: 0.03em;
 }
-.social-network-item.footer {
+.footer .social-network-icon {
   fill: var(--white-color);
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 100%;
 }
 /* Портфолио */
 /* оформление кнопок странице портфолио */
@@ -477,8 +475,6 @@ a:focus {
   font-weight: 500;
   background-color: var(--secondary-backround-color);
   padding: 6px 22px 6px 22px;
-  margin-right: 4px;
-  margin-left: 4px;
   line-height: 1.62;
   cursor: pointer;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -486,6 +482,9 @@ a:focus {
     border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-group:not(:last-child) {
+  margin-right: 8px;
 }
 .button:hover,
 .button:focus {
